add README.md and update index.html

--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Changer</title>
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css" />
     <script src="./js/main.js"></script>
   </head>
   <body>
     <div class="container">
-      <h1>Color Changer</h1>
-      <div id="color-box"></div>
-      <button id="change-color-btn">Change Color</button>
+      <!-- header section -->
+      <header>
+        <h1>Color Changer</h1>
+      </header>
+      <main>
+        <!-- color box -->
+        <div id="color-box"></div>
+        <!-- button -->
+        <button id="change-color-btn">Change Color</button>
+      </main>
     </div>
   </body>
 </html>
